# apagado-automatico

./: .env.example  .gitignore  .kubeval.yaml  .pre-commit-config.yaml  .trivyignore  .yamllint.yml  CHECKPOINT_3_SUMMARY.md  Makefile  README-TASK-SCHEDULER.md  README.md  README_SIMPLE.md  catalog-info.yaml  docker-compose.yml  pyproject.toml  pytest.ini  run_simple_test.sh  setup-aws-oidc.sh  trivy.yaml
.github/codeql/: codeql-config.yml
.github/security/: security-config.yml
.github/workflows/: build.yaml  ci-cd.yml  ci.yaml
.kiro/hooks/: docs-sync-hook.kiro.hook
.kiro/settings/: mcp.json
.trivy/: secret.yaml
argocd/: README.md  backstage-app.yaml  bootstrap.yaml  namespace-scheduler-app.yaml
argocd/apps/: backend-app.yaml  frontend-app.yaml
controller/: .dockerignore  Dockerfile  deployment.yaml  ingress.yaml  pytest.ini  requirements.txt  scaler.py  serviceaccount-with-iam.yaml  simple_controller.py  simple_requirements.txt
controller/tests/: __init__.py  test_simple_controller.py
docs/: README-github-actions.md  architecture-diagrams.md  aws-oidc-setup.md  aws_services_documentation.md  business-hours-configuration.md  controller-iam-setup.md  cost-center-permissions-setup.md  cost-center-validation-api.md  cost_analysis_report.md  deployment-configuration.md  docker-configuration.md  dynamodb-table-design.md  eks-iam-configuration.md  frontend-features-overview.md  frontend-namespace-status-list.md  github-actions-setup.md  github-secrets-configuration.md  github-workflow-example.yml  github-workflow-improvements.md  kubernetes-rbac-configuration.md  kyverno-namespace-scheduler-policies.md  local-development-setup.md  manual-aws-setup.md  namespace-counting-implementation.md  oidc-configuration.md  protected-namespaces.md  rollback-implementation.md  security-scanning-guide.md  structured-logging-configuration.md  yaml-validation-guide.md
frontend/: .dockerignore  .env  .eslintrc.security.js  Dockerfile  deployment.yaml  nginx.conf  package-lock.json  package.json
frontend/public/: index.html  simple.html
frontend/src/: App.js  App.tsx  api.js  app.js  index.html  loading.js  notifications.js  styles.css  weekly-dashboard.js
infrastructure/: README.md  configmap.yaml  deploy.sh  dynamodb-table.yaml  dynamodb-tables.yaml  update-deployment.yaml
kubectl-runner/: Dockerfile  requirements.txt
kubectl-runner/scripts/: health-check.sh  setup-kubeconfig.sh
kubectl-runner/src/: AUDIT_ENDPOINTS_IMPLEMENTATION.md  AUDIT_LOGGING_IMPLEMENTATION.md  app.py  (+47 more)
scripts/: analyze-nodepools.sh  build-and-push.sh  build-images.sh  check-github-secrets.sh  cleanup-notready-nodes.sh  create-dynamodb-tables.sh  create-ecr-repos.sh  create-route53-zone.sh  create_dynamodb_table.py  deploy-argocd.sh  generate_aws_diagram.py  generate_aws_documentation.py  generate_enhanced_aws_diagrams.py  populate-cost-center-permissions.py  push-and-validate-cicd.sh  setup-controller-iam-role.sh  setup-eks-iam-roles.sh  setup-github-actions-iam.sh  setup-local-dns.sh  setup-validation-tools.sh  sync-protected-namespaces.sh  test-dynamodb-connectivity.sh  test-github-actions-flow.sh  test-kubectl-permissions.sh  validate-eks-iam-setup.sh  validate-github-actions-setup.sh  validate-k8s-manifests.sh  validate-yaml.sh
tests/: __init__.py  controller_functionality_report.md  requirements.txt  test_controller_integration.py  test_enhanced_controller.py
(+67 files in other folders)
